--- a/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
@@ -9,12 +9,11 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-color:#000;
-      max-height:800px;
       overflow: hidden;
       position: relative;
 
       @media only screen and (max-device-width: 1024px) {
-        background-size: 150%;
+        background-size: 170%;
       }
 
       .app{
@@ -39,7 +38,7 @@
         }
 
         h1{
-          // font-size: 50px;
+          font-size: 50px;
           text-align: center;
 
           @media only screen and (max-device-width: 1024px) {
@@ -48,7 +47,7 @@
         }
 
         p{
-          font-size: 25px;
+          font-size: 36px;
           text-align: center;
         }
 
@@ -59,15 +58,15 @@
             border: none;
             border-radius:0;
             padding: 10px 35px;
-            // font-size: 45px;
+            font-size: 45px;
           }
 
           span{
             display: block;
-            // font-size:11px;
+            font-size:11px;
 
-            @media only screen and (min-device-width: 1024px) {
-              // font-size:15px;
+            @media only screen and (max-device-width: 1024px) {
+              font-size:20px;
             }
           }
         }
@@ -94,11 +93,11 @@
         margin-bottom:20px;
 
         .section-header{
-          // font-size: 35px ;
+          font-size: 35px ;
           margin-bottom:20px;
         }
         .section-sub-header{
-          // font-size: 30px;
+          font-size: 30px;
         }
     }
 
@@ -181,7 +180,7 @@
           border: none;
           border-radius:0;
           padding: 10px 35px;
-          // font-size: 15px;
+          font-size: 15px;
         }
       }
 
@@ -248,7 +247,7 @@
         padding:0 20px;
 
         @media only screen and (max-device-width: 1024px) {
-          // font-size:45px;
+          font-size:45px;
         }
       }
 
@@ -274,20 +273,20 @@
         }
 
         h2{
-          // font-size:20px;
+          font-size:20px;
           text-align: center;
 
           @media only screen and (max-device-width: 768px) {
-            // font-size: 45px;
+            font-size: 45px;
           }
         }
 
         p{
-          // font-size:20px;
+          font-size:20px;
           text-align: center;
 
           @media only screen and (max-device-width: 768px) {
-            // font-size: 30px;
+            font-size: 30px;
           }
         }
         //
@@ -314,7 +313,7 @@
         padding:0 20px;
 
         @media only screen and (max-device-width: 768px) {
-          // font-size: 45px;
+          font-size: 45px;
         }
       }
 
@@ -324,12 +323,12 @@
         position: relative;
 
         h2{
-          // font-size:40px;
+          font-size:40px;
           text-align: center;
         }
 
         p{
-          // font-size:30px;
+          font-size:30px;
           text-align: center;
         }
 
@@ -351,7 +350,7 @@
           overflow: hidden;
           padding: 0;
           li{
-            // font-size: 30px;
+            font-size: 30px;
             // float: right;
             padding-left:75px;
             position: relative;
@@ -359,7 +358,7 @@
             min-height: 75px;
 
             @media only screen and (min-device-width: 1024px) {
-              // font-size: 20px;
+              font-size: 20px;
               padding-left:60px;
             }
 
@@ -425,12 +424,12 @@
         position: relative;
 
         h2{
-          // font-size:40px;
+          font-size:40px;
           text-align: center;
         }
 
         p{
-          // font-size:30px;
+          font-size:30px;
           text-align: center;
         }
 
@@ -452,7 +451,7 @@
           overflow: hidden;
           padding: 0;
           li{
-            // font-size: 30px;
+            font-size: 30px;
             // float: right;
             padding-left:75px;
             position: relative;
@@ -460,7 +459,7 @@
             min-height: 75px;
 
             @media only screen and (min-device-width: 1024px) {
-              // font-size: 20px;
+              font-size: 20px;
               padding-left:60px;
             }
 
@@ -523,7 +522,7 @@
         div{
           margin:10px 0;
           label{
-            // font-size:25px;
+            font-size:25px;
           }
 
           textarea{
@@ -538,7 +537,7 @@
             color:#FFF;
             background-color:#ADADAD;
             height:50px;
-            // font-size:20px;
+            font-size:20px;
             border:none;
             padding: 1px 20px;
 
@@ -550,7 +549,7 @@
 
         button{
           background-color: #A3CB00;
-          // font-size: 25px;
+          font-size: 25px;
           padding: 10px 90px;
           border: none;
           float: left;
@@ -571,13 +570,13 @@
       position: relative;
 
       h4{
-        // font-size:12px;
+        font-size:12px;
         color:#ADADAD;
         text-align: center;
       }
       ul{
         margin-bottom: 20px;
-        // font-size:10px;
+        font-size:10px;
         .first{
           font-weight:bold;
         }
@@ -612,7 +611,7 @@
       padding:0 20px;
 
       @media only screen and (max-device-width: 1024px) {
-        // font-size:45px;
+        font-size:45px;
       }
     }
 
@@ -621,20 +620,20 @@
       position: relative;
 
       h2{
-        // font-size:30px;
+        font-size:30px;
         text-align: center;
 
         @media only screen and (max-device-width: 768px) {
-          // font-size: 45px;
+          font-size: 45px;
         }
       }
 
       p{
-        // font-size:20px;
+        font-size:20px;
         text-align: center;
 
         @media only screen and (max-device-width: 768px) {
-          // font-size: 30px;
+          font-size: 30px;
         }
       }
 
@@ -661,7 +660,7 @@
       padding:0 20px;
 
       @media only screen and (max-device-width: 1024px) {
-        // font-size:45px;
+        font-size:45px;
       }
     }
 
@@ -670,15 +669,15 @@
       position: relative;
 
       h2{
-        // font-size:30px;
+        font-size:30px;
         text-align: center;
 
         @media only screen and (max-device-width: 768px) {
-          // font-size: 45px;
+          font-size: 45px;
         }
 
         @media only screen and (min-device-width: 1024px) {
-          // font-size:20px;
+          font-size:20px;
         }
       }
 
@@ -688,14 +687,14 @@
 
         .btn{
           width: 100%;
-          // font-size: 35px;
+          font-size: 35px;
           background-color:#A3CB00;
           border: none;
           border-radius:0;
           padding: 10px 35px;
 
           @media only screen and (min-device-width: 1024px) {
-            // font-size:20px;
+            font-size:20px;
           }
         }
       }
