--- a/UAV-IQ-Marketing/app/css/main.css
+++ b/UAV-IQ-Marketing/app/css/main.css
@@ -303,12 +303,12 @@ button {
     #contact-us form div textarea {
       width: 100%;
       height: 200px;
-      background-color: #ADADAD;
+      background-color: #E2E2E2;
       border: none; }
     #contact-us form div input {
       width: 100%;
       color: #FFF;
-      background-color: #ADADAD;
+      background-color: #E2E2E2;
       height: 50px;
       font-size: 20px;
       border: none;
@@ -472,7 +472,11 @@ nav {
   /*IE10+*/
   -o-transition: all .3s;
   /*Opera*/
-  transition: all .3s; }
+  transition: all .3s;
+  border-bottom: 2px solid #A3CB00;
+  -webkit-box-shadow: 0px 6px 16px -5px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 6px 16px -5px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 6px 16px -5px rgba(0, 0, 0, 0.75); }
   .changeHeader .nav-item a {
     color: #7F5E3B !important;
     padding-top: 45px;
@@ -484,7 +488,7 @@ nav {
 .wineflight {
   font-family: 'Raleway', sans-serif; }
   .wineflight .jumbotron {
-    background-size: 120%;
+    background-size: 100%;
     padding-top: 210px !important;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -524,7 +528,7 @@ nav {
           border: none;
           border-radius: 0;
           padding: 10px 35px;
-          font-size: 45px; }
+          font-size: 30px; }
         .wineflight .jumbotron .container .button span {
           display: block;
           font-size: 11px; }
@@ -928,7 +932,7 @@ nav {
           border: none;
           border-radius: 0;
           padding: 10px 35px;
-          font-size: 45px; }
+          font-size: 30px; }
           @media only screen and (max-device-width: 1024px) {
             .datacollection .jumbotron .container .button .btn {
               font-size: 45px; } }
@@ -1105,7 +1109,7 @@ nav {
         padding: 10px 35px;
         text-decoration: none;
         color: #FFF;
-        font-size: 45px; }
+        font-size: 30px !important; }
         @media only screen and (max-device-width: 1024px) {
           .datacollection #advanteges div .button .btn {
             font-size: 25px; } }
@@ -1639,7 +1643,7 @@ nav {
           border: none;
           border-radius: 0;
           padding: 10px 35px;
-          font-size: 45px; }
+          font-size: 30px; }
         .ourProducts .jumbotron .container .button span {
           display: block;
           font-size: 11px; }
