--- a/UAV-IQ-Marketing/app/scss/main.scss
+++ b/UAV-IQ-Marketing/app/scss/main.scss
@@ -515,14 +515,14 @@ button{
         textarea{
           width:100%;
           height: 200px;
-          background-color:#ADADAD;
+          background-color:#E2E2E2;
           border:none;
         }
 
         input{
           width:100%;
           color:#FFF;
-          background-color:#ADADAD;
+          background-color:#E2E2E2;
           height:50px;
           font-size:20px;
           border:none;
@@ -746,6 +746,10 @@ button{
     -ms-transition: all .3s;/*IE10+*/
     -o-transition: all .3s;/*Opera*/
     transition: all .3s;
+    border-bottom: 2px solid #A3CB00;
+    -webkit-box-shadow: 0px 6px 16px -5px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 6px 16px -5px rgba(0,0,0,0.75);
+    box-shadow: 0px 6px 16px -5px rgba(0,0,0,0.75);
 
     .nav-item{
       a{
