--- a/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
@@ -700,4 +700,29 @@
       }
     }
   }
+
+  #advance-research{
+    margin: 50px 0;
+
+    .section-header{
+      padding:0 20px;
+      font-size:45px;
+      font-weight: bold;
+
+      @media only screen and (max-device-width: 1024px) {
+        font-size:45px;
+      }
+    }
+
+    h2{
+      margin: 40px auto;
+      text-align: center;
+      width: 70%;
+    }
+
+    p{
+      margin:40px 0;
+      font-size: 20px;
+    }
+  }
 }
