--- a/UAV-IQ-Marketing/app/scss/main.scss
+++ b/UAV-IQ-Marketing/app/scss/main.scss
@@ -786,4 +786,5 @@ button{
   @import "comoponets/wineflight";
   @import "comoponets/datacollection";
   @import "comoponets/instafarm";
-  @import "comoponets/ourProducts"
+  @import "comoponets/ourProducts";
+  @import "comoponets/droneOperatos";
