--- a/UAV-IQ-Marketing/app/scss/comoponets/instafarm.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/instafarm.scss
@@ -58,7 +58,11 @@
             border: none;
             border-radius:0;
             padding: 10px 35px;
-            font-size: 45px;
+            font-size: 20px;
+
+            @media only screen and (max-device-width: 768px) {
+              font-size: 45px;
+            }
           }
 
           span{
