--- a/UAV-IQ-Marketing/app/scss/main.scss
+++ b/UAV-IQ-Marketing/app/scss/main.scss
@@ -642,6 +642,65 @@ button{
             background-color:#FFF;
           }
         }
+        ul{
+          list-style: none;
+          padding: 0;
+          position: absolute;
+          left: 0;
+          top: 70px;
+          height: 0;
+          overflow: hidden;
+
+          li{
+            margin: 0;
+            display: block;
+            width: 100%;
+            height: auto;
+            color:#FFF;
+            z-index:999;
+
+            a{
+              display: block;
+              padding:5px 40px;
+              white-space:nowrap;
+              color:#A3CB00;
+              background-color:#FFF;
+            }
+
+            &:hover{
+              a{
+                color:#FFF !important;
+                background-color:#A3CB00;
+              }
+            }
+          }
+        }
+
+        .nav-active{
+          z-index: 99;
+          margin-top: 48px;
+
+          li{
+            padding:30px 40px;
+            border-bottom: 2px solid #A3CB00;
+
+            &:hover{
+              a{
+                color: #A3CB00 !important;
+                background-color: #FFF;
+              }
+            }
+          }
+        }
+
+        @media screen and (min-width: 768px){
+          &:hover{
+            ul{
+              height: auto;
+              width: 100%;
+            }
+          }
+        }
       }
 
       @media only screen and (max-device-width: 1024px) {
@@ -657,8 +716,9 @@ button{
           border-bottom: 2px solid #A3CB00;
           a{
             color:#000;
-            padding:20px 20px;
             font-size:17px;
+            display: inline;
+            padding: 0 !important;
           }
 
           &:last-child{
@@ -724,7 +784,7 @@ button{
           position: static;
           list-style:none;
           margin: 0;
-          padding:10px;
+          padding:45px;
           height:auto;
           width:100%;
           clear: both;
@@ -765,7 +825,6 @@ button{
     -ms-transition: all .3s;/*IE10+*/
     -o-transition: all .3s;/*Opera*/
     transition: all .3s;
-    border-bottom: 2px solid #A3CB00;
     -webkit-box-shadow: 0px 6px 16px -5px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 6px 16px -5px rgba(0,0,0,0.75);
     box-shadow: 0px 6px 16px -5px rgba(0,0,0,0.75);
@@ -776,6 +835,7 @@ button{
         padding-top: 45px;
         padding-bottom: 45px;
       }
+
     }
   }
 
